# phys

./: .clang-tidy  .envrc  .gitignore  CMakeLists.txt  Containerfile  README.md  compile_flags.txt  git-hooks.nix  pyproject.toml  setup.py  shell.nix  treefmt.nix
.github/workflows/: build.yaml  lint.yaml  test.yaml  wheels.yaml
docs/: units.md
inc/math/: constants.h
inc/math/linalg/: vector.h
python/phys/: __init__.pyi  _core.pyi
python/phys/example/: __init__.pyi
python/phys/example/_example/: __init__.pyi
python/phys/math/: __init__.pyi
python/phys/math/_math/: __init__.pyi
python/phys/math/linalg/: __init__.py  __init__.pyi  vector_bindings.cpp
src/example/: functions.cpp
src/math/linalg/: vector.cpp
tests/cpp/: test_linalg.cpp
